# donation-app

./: .gitignore  .gitmodules  .psqlrc  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json  script.sh  skaffold-root-kustomize.yml  skaffold.yaml  version.txt  workspace.code-workspace
service/api-data-server/: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  skaffold.yaml
service/api-data-server/config/: schema-autogen.graphql
service/api-data-server/config/github-workflows/: api-data-server.test.yaml
service/api-data-server/k8s/base/: deployment.yaml  kustomization.yaml  route.yaml  service.yaml
service/api-data-server/k8s/components/domain/: kustomization.yaml
service/api-data-server/k8s/components/secret/: .sh  kustomization.yaml
service/api-data-server/k8s/components/tag-version/: kustomization.yaml
service/api-data-server/k8s/overlays/dev/: .env.dev  kustomization.yaml
service/api-data-server/k8s/overlays/dev-volume/: kustomization.yaml
service/api-data-server/k8s/overlays/prod/: .properties  kustomization.yaml
service/api-data-server/k8s/overlays/staging/: kustomization.yaml
service/api-data-server/script/: cornucopia_generate_db_access_functions.script.rs  deploy.sh  dev.sh  generate_graphql_sdl_schema#task@api-data-server.script.rs
service/api-data-server/src/: lib.rs  main.rs
service/api-data-server/src/access_control/: keto_check.rs  mod.rs
service/api-data-server/src/api/graphql/: docs.md  mod.rs  service.rs
service/api-data-server/src/api/graphql/handler/: mod.rs
service/api-data-server/src/api/grpc/: mod.rs
service/api-data-server/src/api/grpc/handler/: mod.rs
service/api-data-server/src/api/rest/handler/: mod.rs
service/api-data-server/src/database/: docs.md
service/api-data-server/src/database/model/: mod.rs  test.rs
service/api-data-server/src/database/model/interaction/: review.rs  schedule_opportunity.rs  transaction.rs
service/api-data-server/src/database/model/listing/: category.rs  collection.rs
service/api-data-server/src/database/model/user/: account.rs  committee.rs  community.rs  mod.rs  profile.rs
service/api-data-server/src/database/repository/interaction/: message.rs  review.rs  schedule_opportunity.rs  transaction.rs
service/api-data-server/src/database/repository/listing/: collection.rs  (+2 more)
service/api-data-server/src/domain/: mod.rs
service/api-data-server/src/server/: mod.rs
service/api-data-server/src/server/connection/: keto.rs  mod.rs  postgresql.rs
service/api-data-server/src/utility/: retry_async_operation.rs
service/api-data-server/tests/: model.rs  simple_dev.rs
service/api-data-server/tests/sql_transaction_test/: example.sql
service/api-data/server/: CHANGELOG.md  Cargo.toml  Dockerfile  script.sh  skaffold.yaml
service/api-data/server/config/: schema-autogen.graphql
service/api-data/server/k8s/base/: deployment.yaml  kustomization.yaml  kustomization.yml  namespace.yml  route.yaml  service.yaml  service.yml
service/api-data/server/obsolete/cornucopia/: Cargo.toml.txt  build.rs  todo.txt
service/api-data/server/script/: deploy.sh  dev.sh  generate_graphql_sdl#task@api-data-server.script.rs  generate_graphql_sdl_schema#task@api-data-server.script.rs
service/api-data/server/src/: grpc.rs  http.rs  lib.rs  main.rs  model.rs  server.rs
service/api-data/server/src/access_control/: keto_check.rs
service/api-data/server/src/database/: docs.md  mod.rs
service/api-data/server/src/graphql_api/: docs.md  mod.rs  mutation_resolver.rs  query_resolver.rs  service.rs
service/api-data/server/src/grpc/: mod.rs
service/api-data/server/src/grpc_api/: mod.rs
service/api-data/server/src/http/: mod.rs
service/api-data/server/src/rest_api/: mod.rs
service/api-data/server/src/server/: connection.rs  grpc.rs  http.rs  mod.rs
service/api-data/server/src/utility/: mod.rs
service/api-data/server/tests/: model.rs  simple_dev.rs
service/auth-ory-stack/ory-oathkeeper/: Cargo.toml  access-rules.json  helm-values.yaml  oathkeeper-config.yaml.tera  render-template.script.rs  script.sh  skaffold.yaml
service/auth-ory-stack/ory-oathkeeper/config/: access-rules.json  test-access-rules.json
service/auth-ory-stack/ory-oathkeeper/script/: deploy.sh  install.sh  render-template.script.rs
service/auth-token-exchange/: CHANGELOG.md  Cargo.toml  Dockerfile  script.sh  skaffold.yaml
service/auth-token-exchange/config/github-workflows/: auth-token-exchange.release.yaml  auth-token-exchange.test.yaml
service/auth-token-exchange/k8s/base/: deployment.yaml  deployment.yml  kustomization.yaml  kustomization.yml  service.yml
service/auth-token-exchange/k8s/components/namespace/: kustomization.yaml
service/auth-token-exchange/k8s/components/tag-version/: kustomization.yaml
service/auth-token-exchange/k8s/overlays/dev/: kustomization.yaml  kustomization.yml
service/auth-token-exchange/k8s/overlays/prod/: kustomization.yaml  kustomization.yml
service/auth-token-exchange/k8s/overlays/staging/: kustomization.yaml
service/auth-token-exchange/script/: deploy.sh  dev.sh  docker.sh
service/auth-token-exchange/src/: auth.rs  main.rs
service/auth-token-exchange/tests/: simple_dev.rs
service/webhook-handler/: CHANGELOG.md  Cargo.toml  Dockerfile  docs.md  script.sh  skaffold.yaml
service/webhook-handler/config/github-workflows/: webhook-handler.release.yaml  webhook-handler.test.yaml
service/webhook-handler/k8s/base/: deployment.yaml  kustomization.yaml  service.yaml
service/webhook-handler/k8s/overlays/dev/: .properties  kustomization.yaml
service/webhook-handler/k8s/overlays/prod/: kustomization.yaml
service/webhook-handler/k8s/overlays/staging/: .properties  kustomization.yaml
service/webhook-handler/script/: deploy.sh  dev.sh  docker.sh
service/webhook-handler/src/: handler.rs  main.rs
service/webhook-handler/src/handler/: mod.rs  user_sync.rs
service/webhook-handler/src/handlers/: mod.rs  user_sync.rs
service/webhook-handler/src/server/: context.rs  mod.rs  router.rs
service/webhook-handler/tests/: simple_dev.rs
(+1105 files in other folders)
