[package]
name = "donation-app"
version = "0.4.18"
edition = "2021"


[workspace]
members = []
exclude = [
    "service/auth-ory-stack/ory-hydra",
    "service/auth-ory-stack/ory-keto",
    "service/auth-ory-stack/ory-kratos",
    "service/auth-ory-stack/ory-oathkeeper",
    "service/auth-token-exchange",
    "service/web-server/src-tauri",
    "service/api-data/server",
]
