[package]
name = "donation-app"
version = "0.4.23"
edition = "2021"


[workspace]
members = ["shared/protobuf"]
exclude = [
    "service/auth-ory-stack/ory-hydra",
    "service/auth-ory-stack/ory-keto",
    "service/auth-ory-stack/ory-kratos",
    "service/auth-ory-stack/ory-oathkeeper",
    "service/auth-token-exchange",
    "service/webhook-handler",
    "service/web-server/src-tauri",
    "service/api-data/server",
]
