[package]
name = "donation-app"
version = "0.4.31"
edition = "2021"

[workspace]
members = ["shared/protobuf-webhook", "shared/protobuf-keto"]
exclude = [
    "platform/ory-hydra",
    "platform/ory-keto",
    "platform/ory-kratos",
    "platform/ory-oathkeeper",

    "service/auth-token-exchange",
    "service/webhook-handler",
    "service/web-server/src-tauri",
    "service/api-data-server",
]
