[package]
name = "auth-token-exchange"
version = "0.0.17"
edition = "2021"

[dependencies]
axum = "0.8.1" # Web framework that focuses on ergonomics and modularity.
base64 = "0.22.1" # Encode and decode base64 as bytes or utf8.
http = "1.3.1" # Types for HTTP requests and responses.
hyper = { version = "1.6.0", features = ["full"] } # A fast and correct HTTP library.
once_cell = "1.20.3" # Single assignment cells and lazy values.
openidconnect = "4.0.0"
serde = { version = "1.0.217", features = ["derive"] } # A serialization/deserialization framework.
serde_json = { version = "1.0.138" } # Serde serialization/deserialization of JSON data.
tokio = { version = "1.43.0", features = ["full"] } # Event-driven, non-blocking I/O platform.
tower = "0.5.2" # Modular reusable components for building robust clients and servers.
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41" # Application-level tracing for Rust.
tracing-subscriber = { version = "~0.3.19", features = ["env-filter"] } # Utilities for `tracing` subscribers.
reqwest = { version = "0.12.20", features = ["json"] }
log = "0.4.26"
env_logger = "0.11.8"

[dev-dependencies]
anyhow = "1.0.95"
httpc-test = "0.1.10"
