[package]
name = "webhook-handler"
version = "0.0.6"
edition = "2021"

# for musl target - statically compile Rust binary with musl instead of relying on image glibc 
# [profile.release]
# strip = true
# lto = true
# codegen-units = 1

[dependencies]
shared_protobuf_webhook = { path = "./library/protobuf-webhook" }

axum = "0.8.1" # Web framework that focuses on ergonomics and modularity.
base64 = "0.22.1" # Encode and decode base64 as bytes or utf8.
http = "1.2.0" # Types for HTTP requests and responses.
hyper = { version = "1.6.0", features = ["full"] } # A fast and correct HTTP library.
once_cell = "1.20.3" # Single assignment cells and lazy values.
serde = { version = "1.0.217", features = ["derive"] } # A serialization/deserialization framework.
serde_json = { version = "1.0.138" } # Serde serialization/deserialization of JSON data.
tokio = { version = "1.45.1", features = ["full"] } # Event-driven, non-blocking I/O platform.
tower = "0.5.2" # Modular reusable components for building robust clients and servers.
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41" # Application-level tracing for Rust.
tracing-subscriber = { version = "~0.3.19", features = ["env-filter"] } # Utilities for `tracing` subscribers.
reqwest = { version = "0.12.20", features = ["json"] }
log = "0.4.26"
env_logger = "0.11.8"
# https://github.com/confluentinc/librdkafka/wiki/Using-SASL-with-librdkafka
rdkafka = { version = "0.37", features = [
    "cmake-build", 
    # "gssapi" # required for SASL, SSL, SCRAM
] }
tonic = "0.13.1"

[dev-dependencies]
anyhow = "1.0.95"
httpc-test = "0.1.10"
