[package]
name = "api-data"
version = "0.0.5"
edition = "2021"

[dependencies]
axum = "0.8.1" # Web framework that focuses on ergonomics and modularity.
base64 = "0.22.1" # Encode and decode base64 as bytes or utf8.
http = "1.2.0" # Types for HTTP requests and responses.
hyper = { version = "1.6.0", features = ["full"] } # A fast and correct HTTP library.
once_cell = "1.20.3" # Single assignment cells and lazy values.
serde = { version = "1.0.217", features = ["derive"] } # A serialization/deserialization framework.
serde_json = { version = "1.0.138" } # Serde serialization/deserialization of JSON data.
tokio = { version = "1.43.0", features = ["full"] } # Event-driven, non-blocking I/O platform.
tower = "0.5.2" # Modular reusable components for building robust clients and servers.
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41" # Application-level tracing for Rust.
tracing-subscriber = { version = "~0.3.19", features = ["env-filter"] } # Utilities for `tracing` subscribers.
reqwest = { version = "0.11", features = ["json"] }
log = "0.4.26"
env_logger = "0.10.1"
prost = "0.13.5"
tonic = "0.13.0"
tonic-reflection = "0.13.0"
shared_proto = { path = "./shared/protobuf" }
deadpool-postgres = "0.14.1"
tokio-postgres = {version = "0.7.13", features = ["with-uuid-1"]}
retry = "2.1.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
postgres-types = { version = "0.2.9", features = ["derive"] }


[dev-dependencies]
anyhow = "1.0.95"
httpc-test = "0.1.10"

[features]
run_dev_test = []