[package]
name = "script"
version = "0.1.0"
edition = "2021"

[dependencies]
tera = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "4.5.30"
dotenv = "0.15.0"
log = "0.4.26"
env_logger = "0.11.6"
atty = "0.2.14"

# [[bin]]
# name = "script"
# path = "script.rs"
# default-run = "script"

[[bin]]
name = "render-template"
path = "render-template.script.rs"
